--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
         <div class="code-game">
           <h1>Code Game</h1>
           <h1>Help the Lynx collect pine cones!</h1>
-          <a href="https://www.w3schools.com/codegame/index.html"><img src="code game.png" alt=""></a>
+          <a href="https://www.w3schools.com/codegame/index.html"><img style="width: 100%;" src="code game.png" alt=""></a>
         </div>
 
         <div class="ex-qz">
